src/styles/index.scss
// Framework
@import '~@redhat-cloud-services/frontend-components-utilities/styles/all';
@import '~@patternfly/patternfly/sass-utilities/index';

// Remap variables, avoid search and replaces.
$pf-global--breakpoint--sm: $pf-v6-global--breakpoint--sm;
$pf-global--breakpoint--md: $pf-v6-global--breakpoint--md;
$pf-global--breakpoint--lg: $pf-v6-global--breakpoint--lg;

.curiosity {
  --pf-global--color--background--light: var(--pf-t--global--background--color--100);
  --pf-global--color--background--dark: var(--pf-t--global--background--color--400);
  --pf-global--color--gray: var(--pf-t--color--gray--40);
  --pf-global--color--gray-dark: var(--pf-t--color--gray--70);

  --pf-global--FontSize--md: var(--pf-t--global--font--size--md);
  --pf-global--FontSize--xs: var(--pf-t--global--font--size--xs);
  --pf-global--FontSize--3xl: var(--pf-t--global--font--size--3xl);

  --pf-global--spacer--sm: var(--pf-t--global--spacer--sm);
  --pf-global--spacer--md: var(--pf-t--global--spacer--md);
  --pf-global--spacer--lg: var(--pf-t--global--spacer--lg);

  --pf-c-card--child--PaddingBottom: var(--pf-v6-c-card--child--PaddingBlockEnd);

  --pf-global--BorderWidth--sm: var(--pf-t--global--border--width--regular);
  --pf-global--BorderColor--100: var(--pf-t--global--border--color--100);

  --pf-c-page__main-section--PaddingLeft: var(--pf-v6-c-page__main-section--PaddingInlineStart);
  --pf-c-page__main-section--PaddingRight: var(--pf-v6-c-page__main-section--PaddingInlineEnd);
}

// Component tweaks, nice to have, overlooked styles
@import 'card';
@import 'tabs';
@import 'select';
@import 'table';
@import 'toolbar';
@import 'tooltip';

// App and enhancements
@import 'fade';
@import 'icon';
@import 'skeleton';
@import 'page-layout';
@import 'banner';
@import 'graph';
@import 'inventory';
@import 'optin';
@import 'errors';

